# Gaia

./: .gitmodules  README.md
Simulator/Modules/CollisionDetector/: CollisionDetertionParameters.h  DiscreteCollisionDetector.h  TriMeshCollisionGeometry.cpp  TriMeshCollisionGeometry.h  VolumetricCollisionDetector.cpp
Simulator/Modules/Framework/: BaseClothSimPhsicsFramework.cpp  BasePhysicsFramework.cpp
Simulator/Modules/IO/: FileIO.cpp
Simulator/Modules/PBD/: PBDPhysics.cpp  PBDPhysics.h  PBDTetMeshGeneralCompute.cu  PBDTetMeshMassSpringCompute.cu  PBDTetMeshNeoHookean.cpp  PBDTetMeshNeoHookeanCompute.cu
Simulator/Modules/Parallelization/: GPUParallelization.h
Simulator/Modules/SolverUtils/: LineSearchUtilities.h  NewtonAssembler.h
Simulator/Modules/TetMesh/: TetMeshFEM.cpp  TetMeshFEM.h
Simulator/Modules/Timer/: RunningTimeStatistics.h
Simulator/Modules/TriMesh/: TriMesh.cpp  TriMesh.h
Simulator/Modules/Types/: Types.h
Simulator/Modules/VBD/: ActiveCollisionList.cpp  VBDPhysics.cpp  VBD_BaseMaterial.cpp  VBD_GeneralCompute.h  VBD_NeoHookean.cpp
Simulator/Modules/Viewer/: Viewer.cpp
Simulator/PBDDynamics/: CMakeLists.txt
Simulator/PBDDynamics/ParameterGen/Examples/: Models.json
Simulator/VBDDynamics/: CMakeLists.txt
